--- a/ytviewer/videos/templates/videos/index.html
+++ b/ytviewer/videos/templates/videos/index.html
@@ -1,16 +1,35 @@
 {% extends 'parts/base.html' %}
+{% load static %}
+
 
 {% block content %}
     <div class="center-box">
         <div class="video-query-box">
             <h2>Enter the URL here:</h2>
             <form action="video" method="get">
-                <input type="text" name="video_url" id="video_url">
-                <input type="submit" value="Go">
+                <input type="text" name="video_url" id="video_url" placeholder="URL or video ID">
+                {% comment %} <input type="submit" value="Go" id="go_button"> {% endcomment %}
+                <input type="button" value="Go" id="go_button">
             </form>
             <p>Note: it might take some time for the video to load.</p>
         </div>
+
+        <div class="result-box">
+            <div id="result-info" class="fade-opacity text-window" style="opacity: 0;"></div>
+            <img src="{% static 'images/throbber.svg' %}" alt="Loading..." id="throbber" class="fade-opacity" style="opacity: 0; display: none;">
+        </div>
+
     </div>
 {% endblock content %}
+
+{% block js %}
+    <script>
+        const requestVideoUrl = "{% url 'get_video' %}";
+        const pollVideoUrl = "{% url 'get_video_info' %}";
+        const showVideoUrl = "{% url 'show_video' %}";
+    </script>
+    <script src="{% static 'js/video-query.js' %}"></script>
+{% endblock js %}
+
         
 
