--- a/ytviewer/videos/templates/videos/watch_video.html
+++ b/ytviewer/videos/templates/videos/watch_video.html
@@ -1,13 +1,26 @@
 {% extends 'parts/base.html' %}
+{% load humanize %}
 
 {% block content %}
     <div class="center-box">
         <h2>Here is your video!</h2>
-        <video controls>
+        <video controls preload="metadata">
             <source src="{{video.file.url}}">
         </video>
         <h2>{{video.title}}</h2>
+        <div class="video-details text-window">
+            <span>Uploaded on {{video.creation_date|date}} by <a href="{{video.channel_url}}">{{video.channel}}</a></span>
+            <span>{{video.view_count|intcomma}} views, {{video.like_count|intcomma}} likes</span>
+        </div>
+        <details class="text-window">
+                <summary>
+                    Video description
+                </summary>
+                <p class="description">{{video.description|urlize}}</p>
+        </details>
+
         <a class='button' href="{{video.file.url}}" download class="download-btn">Download Video</a>
     </div>
-    
+
+
 {% endblock content %}
