Cleaned up code and made naming more consistent

--- a/ytviewer/videos/templates/videos/index.html
+++ b/ytviewer/videos/templates/videos/index.html
@@ -24,7 +24,7 @@
 
 {% block js %}
     <script>
-        const requestVideoUrl = "{% url 'get_video' %}";
+        const requestVideoUrl = "{% url 'queue_video' %}";
         const pollVideoUrl = "{% url 'get_video_info' %}";
         const showVideoUrl = "{% url 'show_video' %}";
     </script>
