Cleaned up and formatted some code, renamed a module

--- a/ytviewer/static/css/vars.css
+++ b/ytviewer/static/css/vars.css
@@ -1,6 +1,6 @@
 :root {
     --light-text-color: #ebf9ff;
-    --dark-text-color: #1b1f2e;
+    --dark-text-color: #1d2f4f;
 
     --header-color: #7187a9;
     --windows-bg-color: #d2ddf3;
