--- a/ytviewer/videos/templates/videos/index.html
+++ b/ytviewer/videos/templates/videos/index.html
@@ -6,9 +6,8 @@
     <div class="center-box">
         <div class="video-query-box">
             <h2>Enter the URL here:</h2>
-            <form action="video" method="get">
+            <form>
                 <input type="text" name="video_url" id="video_url" placeholder="URL or video ID">
-                {% comment %} <input type="submit" value="Go" id="go_button"> {% endcomment %}
                 <input type="button" value="Go" id="go_button">
             </form>
             <p>Note: it might take some time for the video to load.</p>
