--- a/ytviewer/videos/templates/videos/index.html
+++ b/ytviewer/videos/templates/videos/index.html
@@ -15,7 +15,12 @@
 
         <div class="result-box">
             <div id="result-info" class="fade-opacity text-window" style="opacity: 0;"></div>
-            <img src="{% static 'images/throbber.svg' %}" alt="Loading..." id="throbber" class="fade-opacity" style="opacity: 0; display: none;">
+            <div id="loading-info" class="fade-opacity loading-info" style="opacity: 0; display: none;">
+                <div class="progressbar">
+                    <div id="progressbar-fill" class="progressbar-fill" style="width: 0%;"></div>
+                </div>
+                <img src="{% static 'images/throbber.svg' %}" alt="Loading..." id="throbber">
+            </div>
         </div>
 
     </div>
