--- a/ytviewer/videos/templates/videos/index.html
+++ b/ytviewer/videos/templates/videos/index.html
@@ -16,6 +16,7 @@
         <div class="result-box">
             <div id="result-info" class="fade-opacity text-window" style="opacity: 0;"></div>
             <div id="loading-info" class="fade-opacity loading-info" style="opacity: 0; display: none;">
+                <h3>Loading...</h3>
                 <div class="progressbar">
                     <div id="progressbar-fill" class="progressbar-fill" style="width: 0%;"></div>
                 </div>
